Actually fixed horizontal scroll

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -9,7 +9,6 @@
 html, body {
   max-width: 100%;
   overflow-x: hidden;
-  touch-action: pan-y;
 }
 
 body {
@@ -123,7 +122,7 @@ hr {
     }
   }
 
-  @media all and (max-width: 939px) {
+  @media screen and (max-width: 939px) {
     position: absolute;
     left: 35px;
   }
